# srp_platform

./: .bazelrc  .clang-format  .gitignore  .zuul.yaml  MODULE.bazel  README.md  WORKSPACE  download.bzl  install.bzl  install_python.bzl  logs.dlt  requirements.in  requirements_lock.txt  todo
.github/: CODEOWNERS
.github/workflows/: Check syntax.yaml  Check_UT.yaml  check_syntax.yaml  self-approv.yaml
.jobs/: build_example_ecu_arm.yaml  build_example_ecu_arm_fast.yaml  build_example_ecu_x86.yaml  build_example_ecu_x86_fast.yaml  build_full_platform_apps.yaml  build_full_platform_apps_fast.yaml  build_full_stack.yaml  build_full_stack_fast.yaml  cpplint.yaml  itf.yaml  unit_tests_platform.yaml
ara/com/: BUILD  com_controller.cc  com_controller.h  com_error_domain.cc  com_error_domain.h  i_com_client.h  initialization.cc  instance_identifier_container.h  log.h  message_error_domain.cc  message_error_domain.h  msg_type.h
ara/core/: BUILD  condition_variable.h  model_item.cc  model_item.h
ara/diag/: BUILD
ara/exec/: BUILD  adaptive_lifecycle_menager.cc  adaptive_lifecycle_menager.h
ara/log/: BUILD  log.h  log_stream.cpp  log_stream.h  logging_menager.cpp
bazel/libs/: doipclient.BUILD  qemu_image.BUILD  someip.BUILD  third_party_repositories.bzl  untar.BUILD
bazel/toolchain/: toolchain.bzl
bindings/: BUILD  log.h
bindings/com/: BUILD  sd_bindings.h
bindings/common/: BUILD  log.h
ci/: BUILD
core/common/: BUILD  wait_queue.h
core/data/: BUILD  type_converter.h
core/json/: BUILD
cpu/ec/: BUILD
playbooks/: testjob.yaml
tests/: BUILD
(+683 files in other folders)
